--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
 serde = { version = "1.0.221", features = ["derive"]}
 serde_json = "1.0.144"
 js-sys = "0.3"
+kdtree = "0.8.0"
 
 getrandom = { version = "0.2.16", features = ["js"]}
 regex = "1.12.2"
