--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+nalgebra="0.34.1" 
+nalgebra-sparse="0.11.0"
+rayon="1.5.2"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 serde = { version = "1.0.221", features = ["derive"] }
 serde_json = "1.0.144"
