--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ nalgebra-sparse="0.11.0"
 rayon="1.5.2"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 serde = { version = "1.0.221", features = ["derive"] }
+evalexpr = "11.3.0"
+
 serde_json = "1.0.144"
 serde-wasm-bindgen = "0.6.5"
 js-sys = "0.3"
